--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - main
   schedule:
-    - cron: "0 1 * * *" # 每天凌晨1点运行
+    - cron: "0 1 * * *" # 每天凌晨1点自动运行
   workflow_dispatch:
     inputs:
-      force_update:
-        description: '是否强制更新（忽略版本检查）'
+      update_latest:
+        description: '是否手动更新 Latest 正式版？'
         required: false
         default: 'false'
 
@@ -20,63 +20,83 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - name: 检出仓库
+      - name: 初始化仓库
         uses: actions/checkout@v4
 
-      - name: 设置环境
+      - name: 获取当前本地版本
+        id: get_local_version
         run: |
-          echo "REPO_URL=https://api.github.com/repos/bia-pain-bache/BPB-Worker-Panel/releases" >> $GITHUB_ENV
-          echo "TARGET_FILE=worker.zip" >> $GITHUB_ENV
+          if [ -f version.txt ]; then
+            LOCAL_VERSION=$(cat version.txt)
+          else
+            LOCAL_VERSION=""
+          fi
+          echo "LOCAL_VERSION=$LOCAL_VERSION" >> $GITHUB_ENV
 
-      - name: 检查并更新 Worker
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 使用 GitHub Token 认证
+      - name: 获取最新 Pre-release 和 Latest
+        id: get_release
         run: |
-          # 日志函数
-          log() { echo "[$(date +'%Y-%m-%d %H:%M:%S')] $1"; }
+          API_URL="https://api.github.com/repos/bia-pain-bache/BPB-Worker-Panel/releases"
+          RESPONSE=$(curl -s "$API_URL")
 
-          log "开始检查更新..."
+          # 最新 Pre-release
+          PRE_RELEASE_TAG=$(echo "$RESPONSE" | jq -r '.[] | select(.prerelease==true) | .tag_name' | head -n 1)
+          PRE_RELEASE_DOWNLOAD=$(echo "$RESPONSE" | jq -r '.[] | select(.prerelease==true) | .assets[] | select(.name=="worker.zip") | .browser_download_url' | head -n 1)
 
-          # 获取本地版本
-          LOCAL_VERSION=$(cat version.txt 2>/dev/null || echo "")
-          log "本地版本: ${LOCAL_VERSION:-无}"
+          # 最新正式版 Latest（仅提醒）
+          LATEST_TAG=$(echo "$RESPONSE" | jq -r '.[] | select(.prerelease==false) | .tag_name' | head -n 1)
 
-          # 获取最新 Release
-          log "获取最新 Release 信息..."
-          RESPONSE=$(curl -s --retry 3 -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3+json" "$REPO_URL")
-          if [ $? -ne 0 ]; then
-            log "ERROR: 无法访问 GitHub API"
-            exit 1
+          echo "PRE_RELEASE_TAG=$PRE_RELEASE_TAG" >> $GITHUB_ENV
+          echo "PRE_RELEASE_DOWNLOAD=$PRE_RELEASE_DOWNLOAD" >> $GITHUB_ENV
+          echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
+
+          echo "最新 Pre-release: $PRE_RELEASE_TAG"
+          echo "最新正式版 Latest: $LATEST_TAG (仅提醒)"
+
+      - name: 判断是否需要更新 Pre-release
+        id: check_update
+        run: |
+          if [ "$LOCAL_VERSION" = "$PRE_RELEASE_TAG" ]; then
+            echo "UPDATE_NEEDED=false" >> $GITHUB_ENV
+            echo "已经是最新 Pre-release 版本"
+          else
+            echo "UPDATE_NEEDED=true" >> $GITHUB_ENV
+            echo "发现新 Pre-release 版本 $PRE_RELEASE_TAG"
           fi
 
-          TAG_NAME=$(echo "$RESPONSE" | jq -r '.[0].tag_name')
-          DOWNLOAD_URL=$(echo "$RESPONSE" | jq -r '.[0].assets[] | select(.name == "'"$TARGET_FILE"'") | .browser_download_url')
+      - name: 更新 Pre-release
+        if: env.UPDATE_NEEDED == 'true'
+        run: |
+          shopt -s extglob
+          rm -rf !( .git )
+          wget -O worker.zip "$PRE_RELEASE_DOWNLOAD"
+          unzip -o worker.zip
+          rm worker.zip
+          echo "$PRE_RELEASE_TAG" > version.txt
 
-          if [ -z "$DOWNLOAD_URL" ] || [ "$DOWNLOAD_URL" == "null" ]; then
-            log "ERROR: 未找到 $TARGET_FILE"
-            exit 1
-          fi
-          log "最新版本: $TAG_NAME"
-
-          # 判断是否需要更新
-          FORCE_UPDATE=${{ github.event.inputs.force_update || 'false' }}
-          if [ "$LOCAL_VERSION" = "$TAG_NAME" ] && [ "$FORCE_UPDATE" != "true" ]; then
-            log "已是最新版本，无需更新"
-            exit 0
-          fi
-
-          # 下载并更新
-          log "下载 $TARGET_FILE..."
-          wget -q -O "$TARGET_FILE" "$DOWNLOAD_URL"
-          log "解压 $TARGET_FILE..."
-          unzip -o "$TARGET_FILE"
-          rm "$TARGET_FILE"
-          echo "$TAG_NAME" > version.txt
-          log "更新完成，新版本: $TAG_NAME"
-
-      - name: 提交更改
-        if: success() # 仅在更新成功时提交
+      - name: 提交 Pre-release 更新
+        if: env.UPDATE_NEEDED == 'true'
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "🔄 自动同步 Worker 版本: ${{ steps.check_update.outputs.tag_name || '未知' }}"
+          commit_message: "🔄 自动同步最新 Pre-release Worker：${{ env.PRE_RELEASE_TAG }}"
           commit_author: "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
+          push_options: --force
+
+      - name: 手动更新 Latest
+        if: ${{ github.event.inputs.update_latest == 'true' }}
+        run: |
+          echo "开始手动更新 Latest 正式版 $LATEST_TAG"
+          API_URL="https://api.github.com/repos/bia-pain-bache/BPB-Worker-Panel/releases"
+          RESPONSE=$(curl -s "$API_URL")
+          LATEST_DOWNLOAD=$(echo "$RESPONSE" | jq -r ".[] | select(.tag_name==\"$LATEST_TAG\") | .assets[] | select(.name==\"worker.zip\") | .browser_download_url")
+          shopt -s extglob
+          rm -rf !( .git )
+          wget -O worker.zip "$LATEST_DOWNLOAD"
+          unzip -o worker.zip
+          rm worker.zip
+          echo "$LATEST_TAG" > version.txt
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "🔄 手动同步 Latest Worker：$LATEST_TAG"
+          git push --force
